Fix up of buttons and dark mode

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,11 +1,25 @@
 @import "./base.css";
 
+a,
+a:hover,
+a:active,
+a:visited {
+  color: #36d;
+}
+
+input,
+select {
+  border: 1px solid var(--color-border);
+  background: transparent;
+  color: var(--color-text);
+}
+
 button,
 a.linkButton {
   border-radius: 5px;
   background-color: #36d;
   color: #fff;
-  border: 1px solid #fff;
+  border: 1px solid var(--color-background);
   padding-top: 0.5em;
   padding-bottom: 0.5em;
   text-decoration: none;
